--- a/server/public/templates/carDashboard.html
+++ b/server/public/templates/carDashboard.html
@@ -1,3 +1,4 @@
+<div class="col-md-4 col-sm-12" style="margin-top: 25vh">
     <div  style="text-align: center; width:100%">
         <button class="buttonBox vertButton" ng-click="forward()" style="padding-top: 7px;">&#8593;</button><br><!-- Up -->
         <div style="display: inline-flex;">
