--- a/server/views/Dashboard.ejs
+++ b/server/views/Dashboard.ejs
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="lib/bootstrap.min.css">
     
 <!--    <script src="lib/jquery.min.js" type="text/javascript"></script>-->
-    <script src="lib/three.min.js" type="text/javascript"></script> 
-    <script src="lib/angular.min.js" type="text/javascript"></script> 
+<!--    <script src="lib/three.min.js" type="text/javascript"></script> -->
+    <script src="lib/angular.js" type="text/javascript"></script> 
     <script src="lib/angular-route.min.js" type="text/javascript"></script> 
 <!--    <script src="lib/Smooth.js" type="text/javascript"></script> -->
     
@@ -40,5 +40,6 @@
     
      <script src="javascript/app.js" type="text/javascript"></script> 
      <script src="javascript/towerDashboard.js" type="text/javascript"></script> 
+     <script src="javascript/carDashboard.js" type="text/javascript"></script> 
     
 </html>
